Update invite flow and add HOLDEN2024 invite code

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,13 +4,13 @@
 
 [[redirects]]
   from = "/about.html"
-  to = "/program.html"
+  to = "/invite.html"
   status = 301
   force = true
 
 [[redirects]]
   from = "/checkout.html"
-  to = "/program.html"
+  to = "/invite.html"
   status = 301
   force = true
 
